Update links in containerized install guide
Updating links in titles/aap-containerized-install

--- a/downstream/modules/platform/proc-installing-containerized-aap.adoc
+++ b/downstream/modules/platform/proc-installing-containerized-aap.adoc
@@ -10,7 +10,7 @@
 You can control the installation of {PlatformNameShort} with inventory files. Inventory files define the hosts and containers used and created, variables for components, and other information needed to customize the installation.
 
 == Example inventory files
-Example inventory files are provided in this document that you can copy and change to quickly get started. You can find additional example inventory files in link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/tested_deployment_models/index#container-topologies[Container supported topologies] in _{TitleTopologies}_.
+Example inventory files are provided in this document that you can copy and change to quickly get started. You can find additional example inventory files in link:{URLTopologies}/container-topologies[Container supported topologies] in _{TitleTopologies}_.
 
 To use the example inventory files, replace the `< >` placeholders with your specific variables, and update the host names. Refer to the `README.md` file in the installation directory for more information about optional and required variables.
 
