--- a/downstream/modules/platform/proc-preparing-the-rhel-host-for-containerized-installation.adoc
+++ b/downstream/modules/platform/proc-preparing-the-rhel-host-for-containerized-installation.adoc
@@ -50,7 +50,7 @@ sudo dnf install -y wget git rsync vim
 sudo hostnamectl set-hostname <your_hostname>
 ----
 
-. Optional: To have the installer automatically pick up and apply your {PlatformNameShort} subscription manifest license, follow the steps in link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_operations_guide/assembly-aap-obtain-manifest-files[Chapter 2. Obtaining a manifest file].
+. Optional: To have the installer automatically pick up and apply your {PlatformNameShort} subscription manifest license, follow the steps in link: {URLCentralAuth}/assembly-gateway-licensing#assembly-aap-obtain-manifest-files[Obtaining a manifest file].
 
 [role="_additional-resources"]
 .Additional resources
