--- a/downstream/modules/platform/ref-database-inventory-variables.adoc
+++ b/downstream/modules/platform/ref-database-inventory-variables.adoc
@@ -26,7 +26,7 @@ Default = `prefer`
 
 | *`postgres_max_connections`* | `postgresql_max_connections` | Maximum database connections setting to apply if you are using installer-managed PostgreSQL.
 
-See link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_administration_guide/index#ref-controller-database-settings[PostgreSQL database configuration] in the {ControllerName} administration guide for help selecting a value.
+See link:{URLControllerAdminGuide}/assembly-controller-improving-performance#ref-controller-database-settings[PostgreSQL database configuration and maintenance for automation controller] for help selecting a value.
 
 Default = `1024`
 
