--- a/downstream/modules/platform/ref-general-inventory-variables.adoc
+++ b/downstream/modules/platform/ref-general-inventory-variables.adoc
@@ -34,7 +34,7 @@ Enter your Red Hat Registry Service Account credentials in `registry_username` a
 
 When `registry_url` is `registry.redhat.io`, username and password are required if not using a bundle installer.
 
-For more information, see link:{URLInstallationGuide}/index#proc-set-registry-username-password[Setting registry_username and registry_password].
+For more information, see link:{URLInstallationGuide}/assembly-platform-install-scenario#proc-set-registry-username-password[Setting registry_username and registry_password].
 | `registry_url` |`registry_url` | URL for the registry source. 
 
 Default = `registry.redhat.io`
@@ -44,7 +44,7 @@ User credential for access to `registry_url`.
 
 Enter your Red Hat Registry Service Account credentials in `registry_username` and `registry_password` to link to the Red Hat container registry.
 
-For more information, see link:{URLInstallationGuide}/index#proc-set-registry-username-password[Setting registry_username and registry_password].
+For more information, see link:{URLInstallationGuide}/assembly-platform-install-scenario#proc-set-registry-username-password[Setting registry_username and registry_password].
 | `routable_hostname` |`routable_hostname` | This variable is used if the machine running the installer can only route to the target host through a specific URL. For example, if you use short names in your inventory, but the node running the installer can only resolve that host by using a FQDN.
 
 If `routable_hostname` is not set, it should default to `ansible_host`. If you do not set `ansible_host`, `inventory_hostname` is used as a last resort.
