AAP-32187n Fix links from RHDH and Navigator guides

--- a/downstream/modules/devtools/proc-rhdh-configure-pah-url.adoc
+++ b/downstream/modules/devtools/proc-rhdh-configure-pah-url.adoc
@@ -17,13 +17,12 @@ The Ansible plug-ins will function without it.
 .Prerequisites: 
 * A {PrivateHubName} instance.
 +
-For more information on installing {PrivateHubName},  refer to the
-link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}#Installation%20and%20Upgrade[Installation and Upgrade]
-guides in the {PlatformNameShort} documentation.
+For more information on installing {PrivateHubName}, refer to the installation guides in the
+link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}[{PlatformNameShort} documentation].
 
 .Procedure:
 
-. Edit your custom {RHDH} config map, fpr example `app-config-rhdh`.
+. Edit your custom {RHDH} config map, for example `app-config-rhdh`.
 . Add the following code to your {RHDH} `app-config-rhdh.yaml` file. 
 +
 ----
