--- a/downstream/modules/devtools/proc-rhdh-set-up-controller-project.adoc
+++ b/downstream/modules/devtools/proc-rhdh-set-up-controller-project.adoc
@@ -17,13 +17,10 @@ Alternatively, if your platform instance was not configured during the Ansible p
 . Log in to {ControllerName}.
 . Create a project in {PlatformNameShort} for the GitHub repository where you stored your playbook project.
 Refer to the
-link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_user_guide/index#controller-projects[Projects]
-chapter of the _Automation controller user guide_.
+link:{URLControllerUserGuide}/controller-projects[Projects]
+chapter of _TitleControllerUserGuide_.
 . Create a job template that uses a playbook from the project that you created.
 Refer to the
-link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_user_guide/index#controller-create-job-template[Job Templates]
-// AAP 2.5 link:
-// link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/using_automation_execution/index#controller-job-templates[Job templates]
-chapter of the _Automation controller user guide_.
-// AAP 2.5 link:
-// chapter of _Using automation execution_.
+link:{URLControllerUserGuide}/controller-workflow-job-templates[Workflow job templates]
+chapter of _TitleControllerUserGuide_.
+
