--- a/downstream/modules/devtools/proc-rhdh-warning-unable-authenticate-aap.adoc
+++ b/downstream/modules/devtools/proc-rhdh-warning-unable-authenticate-aap.adoc
@@ -16,7 +16,7 @@ For help, please refer to the Ansible plug-ins installation guide.
 
 . Verify that the automation controller Personal Access Token (PAT) configured in the Ansible plug-ins is correct.
 For more information, refer to the
-link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_user_guide/index#assembly-controller-applications[Applications]
-section of the _Automation controller user guide_.
+link:{URLCentralAuth}/gw-token-based-authentication#proc-controller-apps-create-tokens[Adding tokens]
+section of _TitleCentralAuth_.
 . After correcting the authentication details, restart the {RHDH} pod to initiate a subscription query.
 
