--- a/downstream/assemblies/devtools/assembly-devtools-intro.adoc
+++ b/downstream/assemblies/devtools/assembly-devtools-intro.adoc
@@ -15,7 +15,7 @@ you can use these tools from the {VSCode} user interface.
 Use {ToolsName} during local development of playbooks, local testing, and in a CI pipeline (linting and testing).
 
 This document describes how to use {ToolsName} to create a playbook project that contains playbooks and roles that you can reuse within the project.
-It also describes how to test the playbooks and deploy the project on your {AAP} instance so that you can use the playbooks in automation jobs.
+It also describes how to test the playbooks and deploy the project on your {PlatformNameShort} instance so that you can use the playbooks in automation jobs.
 
 include::devtools/ref-devtools-components.adoc[leveloffset=+1]
 
