--- a/downstream/modules/navigator/proc-browse-collections-tui.adoc
+++ b/downstream/modules/navigator/proc-browse-collections-tui.adoc
@@ -100,8 +100,8 @@ image::navigator-vscode-example.png[Documentation example shown in the editing t
 image::navigator-collection-list.png[Collection list]
 
 
-[role="_additional-resources"]
-.Additional resources
-
-* https://docs.ansible.com/ansible/latest/cli/ansible-collection.html[ansible-collection].
-* https://docs.ansible.com/ansible/latest/user_guide/intro_collection.html[Introduction to Ansible inventories].
+// [role="_additional-resources"]
+// .Additional resources
+// 
+// * https://docs.ansible.com/ansible/latest/cli/ansible-collection.html[ansible-collection].
+// * https://docs.ansible.com/ansible/latest/user_guide/intro_collection.html[Introduction to Ansible inventories].
