AAP-29097 Minor corrections for peer review

--- a/downstream/modules/eda/proc-eda-create-event-stream.adoc
+++ b/downstream/modules/eda/proc-eda-create-event-stream.adoc
@@ -31,14 +31,14 @@ Forward events to rulebook activation:: Use this option to enable or disable the
 +
 [NOTE]
 ====
-The event stream's event forwarding can be disabled for testing purposes while diagnosing connections and evaluating the incoming data. Disabling the *Forward events to rulebook activation* option allows you to test the event stream connection with the remote system, analyze the header and payload, and if necessary, diagnose credential issues. This ensures that events will not be forwarded to rulebook activations causing rules and conditions to be triggered inadvertently while you are in test mode. Some enterprises might have policies to change secrets and passwords at regular cadence. You can enable/disable this option anytime after the event stream is created.
+The event stream's event forwarding can be disabled for testing purposes while diagnosing connections and evaluating the incoming data. Disabling the *Forward events to rulebook activation* option allows you to test the event stream connection with the remote system, analyze the header and payload, and if necessary, diagnose credential issues. This ensures that events are not be forwarded to rulebook activations causing rules and conditions to be triggered inadvertently while you are in test mode. Some enterprises might have policies to change secrets and passwords at regular cadence. You can enable/disable this option anytime after the event stream is created.
 ====
 
 . Click btn:[Create event stream].
 
 After creating your event stream, the following outputs occur:
 
-* The Details page is displayed. From there or the Event Streams list view, you can edit or delete it. Also, the Event Streams page shows all of the event streams you have created and the following columns for each event: *Events received*, *Last event received*, and *Event stream type*. As the first two columns receive external data through the event stream, they will continuously update to let you know they are receiving events from remote systems.
+* The Details page is displayed. From there or the Event Streams list view, you can edit or delete it. Also, the Event Streams page shows all of the event streams you have created and the following columns for each event: *Events received*, *Last event received*, and *Event stream type*. As the first two columns receive external data through the event stream, they are continuously updated to let you know they are receiving events from remote systems.
 * If you disabled the event stream, the Details page is displayed with a warning message, *This event stream is disabled*. 
 * Your new event stream generates a URL that is necessary when you configure the webhook on the remote system that sends events.
 
