--- a/downstream/modules/eda/proc-eda-replace-sources-with-event-streams.adoc
+++ b/downstream/modules/eda/proc-eda-replace-sources-with-event-streams.adoc
@@ -9,7 +9,7 @@ There are several key points to keep in mind regarding source mapping:
 . An event stream can only be used once in a rulebook source swap. If you have multiple sources in the rulebook, you can only replace each source once.
 . The source mapping happens only in the current rulebook activation. You must repeat this process for any other activations using the same rulebook.
 . The source mapping is valid only if the rulebook doesn't get modified. If the rulebook gets modified during the source mapping process, the source mapping would fail and it would  have to be repeated.
-. If the rulebook is modified after the source mapping has been created and a *Restart* happens, the rulebook activation will fail.
+. If the rulebook is modified after the source mapping has been created and a *Restart* happens, the rulebook activation fails.
 
 
 .Procedure
@@ -91,6 +91,6 @@ The content would be equivalent to the file passed through the `--vars` flag of 
 Options:: Check the *Skip audit events* option if you do not want to see your events in the Rule Audit.
 . Click btn:[Create rulebook activation].
 +
-After you create your rulebook activation, the Details page is displayed. 
+After you create your rulebook activation, the *Details* page is displayed. 
 +
 You can navigate to the Event streams page to confirm your events have been received.  
