--- a/downstream/modules/eda/proc-eda-verify-event-streams-work.adoc
+++ b/downstream/modules/eda/proc-eda-verify-event-streams-work.adoc
@@ -21,4 +21,4 @@ The *Header* and *Body* sections for the event stream are displayed on the Detai
 . Toggle the *Forward events to rulebook activation* option to  enable you to push your events to a rulebook activation.
 This moves the event stream to production mode and makes it easy to attach to rulebook activations.
 +
-When this option is toggled off, your ability to forward events to a rulebook activation is disabled and you will see the *This event stream is disabled* message.
+When this option is toggled off, your ability to forward events to a rulebook activation is disabled and the *This event stream is disabled* message is displayed.
