--- a/downstream/assemblies/hub/assembly-container-user-access.adoc
+++ b/downstream/assemblies/hub/assembly-container-user-access.adoc
@@ -15,9 +15,9 @@ include::hub/ref-container-permissions.adoc[leveloffset=+1]
 include::hub/proc-create-groups.adoc[leveloffset=+1]
 // [hherbly]: proc-assigning-permissions seems to repeat proc-create-groups.adoc include::hub/proc-assigning-permissions.adoc[leveloffset=+1]
 
-.Additional resources
+// .Additional resources
 
-* See <<container-registry-group-permissions, Container registry team permissions>> to learn more about specific permissions.
+// [hherbly] LINK SHOULD BE REPLACED when we find a better one * See <<container-registry-group-permissions, Container registry team permissions>> to learn more about specific permissions.
 
 // [hherbly]: this module also seems redundant include::hub/proc-add-user-to-group.adoc[leveloffset=+1]
 
