--- a/downstream/modules/troubleshooting-aap/proc-troubleshoot-job-permissions.adoc
+++ b/downstream/modules/troubleshooting-aap/proc-troubleshoot-job-permissions.adoc
@@ -16,4 +16,4 @@ This issue happens when your {PrivateHubName} is protected with a password or to
 [role="_additional-resources"]
 .Additional resources
 
-* For information about creating new credentials in {ControllerName}, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/using_automation_execution/controller-credentials#controller-create-credential[Creating new credentials] in _{ControllerUG}_.
+* For information about creating new credentials in {ControllerName}, see link:{URLControllerUserGuide}/controller-credentials#controller-create-credential[Creating new credentials] in _{TitleControllerUserGuide}_.
