--- a/downstream/modules/troubleshooting-aap/proc-troubleshoot-job-resolve-module.adoc
+++ b/downstream/modules/troubleshooting-aap/proc-troubleshoot-job-resolve-module.adoc
@@ -5,7 +5,7 @@ Jobs are failing with the error message “ERROR! couldn't resolve module/action
 
 This error can happen when the collection associated with the module is missing from the {ExecEnvShort}.
 
-The recommended resolution is to create a custom {ExecEnvShort} and add the required collections inside of that {ExecEnvShort}. For more information about creating an {ExecEnvShort}, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/creating_and_consuming_execution_environments/assembly-using-builder[Using {Builder}] in Creating and Consuming Execution Environments.
+The recommended resolution is to create a custom {ExecEnvShort} and add the required collections inside of that {ExecEnvShort}. For more information about creating an {ExecEnvShort}, see link:{URLBuilder}/assembly-using-builder[Using {Builder}] in _{TitleBuilder}_.
 
 Alternatively, you can complete the following steps:
 
