--- a/downstream/modules/troubleshooting-aap/proc-troubleshoot-invalid-credentials.adoc
+++ b/downstream/modules/troubleshooting-aap/proc-troubleshoot-invalid-credentials.adoc
@@ -27,5 +27,6 @@ The default value is `-1`, which disables the maximum sessions allowed. This mea
 
 * For more information about installing and using the controller node CLI, see link:https://docs.ansible.com/automation-controller/latest/html/controllercli/index.html[AWX Command Line Interface] and link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/automation_controller_administration_guide/index#assembly-controller-awx-manage-utility[AWX manage utility].
 
-* For more information about session limits, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/controller-session-limits[Session Limits] in the Automation Controller Administration Guide.
+// Michelle - commenting out for now as this content doesn't appear to exist anymore in a published doc
+// * For more information about session limits, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/controller-session-limits[Session Limits] in the Automation Controller Administration Guide.
 
