--- a/downstream/modules/hub/proc-using-podman-ensure-image-signed.adoc
+++ b/downstream/modules/hub/proc-using-podman-ensure-image-signed.adoc
@@ -1,13 +1,10 @@
 [id="using-podman-ensure-image-signed"]
 
 = Using podman to ensure an image is signed by a specific signature
-When ensuring a signature is signed by specific signatures, the signature must be on your local environment.
+When ensuring an {ExecEnvName} is signed by specific signatures, the signature must be on your local environment.
 
 .Procedure
 
 . From the navigation panel, select {MenuACAdminSignatureKeys}.
-. Click the btn:[More Actions] icon *{MoreActionsIcon}* next to the signature that you are using.
-. Select *Download key* from the drop-down menu.
-A new window opens.
-. In the *Name* field, enter the name of the key.
-. Click btn:[Save].
+. Click the btn:[Download key] icon next to the signature that you are using. A new window should open to indicate you have downloaded the key.
+
