AAP-30117 Added links to user permissions info in Using automation decisions guide

--- a/downstream/assemblies/eda/assembly-eda-user-guide-overview.adoc
+++ b/downstream/assemblies/eda/assembly-eda-user-guide-overview.adoc
@@ -26,4 +26,4 @@ The following procedures form the user configuration:
 For information on how to set user permissions for {EDAcontroller}, see the following in the link:{URLCentralAuth}/index[Access management and authentication guide]: 
 
 * link:{URLCentralAuth}/index#ref-controller-user-roles[Adding roles for a user]
-* link:{URLCentralAuth}/index#assembly-gw-roles[Roles]
+* link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/access_management_and_authentication/assembly-gw-roles[Roles]
