--- a/downstream/titles/release-notes/topics/aap-25.adoc
+++ b/downstream/titles/release-notes/topics/aap-25.adoc
@@ -17,7 +17,7 @@ At the time of the {PlatformNameShort} 2.5 GA release, a limited set of topologi
 
 The following table shows the tested topologies for {PlatformNameShort} 2.5:
 
-[cols="10%,20%,40%,30%"]
+[%autowidth]
 |===
 | Mode | Infrastructure | Description | Tested topologies
 
