--- a/downstream/titles/release-notes/topics/platform-intro.adoc
+++ b/downstream/titles/release-notes/topics/platform-intro.adoc
@@ -4,17 +4,18 @@
 {PlatformName} simplifies the development and operation of automation workloads for managing enterprise application infrastructure lifecycles. {PlatformNameShort} works across multiple IT domains, including operations, networking, security, and development, as well as across diverse hybrid environments. Simple to adopt, use, and understand, {PlatformNameShort} provides the tools needed to rapidly implement enterprise-wide automation, no matter where you are in your automation journey.
 
 == Upgrades are unsupported at this time
-At the initial release of {PlatformNameShort} 2.5, upgrades from earlier releases are unsupported. Only new installations are supported. Upgrade support will follow shortly after the initial 2.5 release. However, you can deploy {EDAName} 2.5 with an existing 2.4 {ControllerName}. For more information, see xref:aap-25.adoc#eda-2.5-with-automation-controller-2.4[{EDAName} 2.5 with {ControllerName} 2.4]
+At the initial release of {PlatformNameShort} 2.5, upgrades from earlier releases are unsupported. Only new installations are supported. Upgrade support will follow shortly after the initial 2.5 release. However, you can deploy {EDAName} 2.5 with an existing 2.4 {ControllerName}. For more information, see link:https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html-single/release_notes/index#eda-2.5-with-automation-controller-2.4[{EDAName} 2.5 with {ControllerName} 2.4].
 
 [[whats-included]]
 == What is included in the {PlatformNameShort}
 
-[%header, cols="a,a,a,a,a,a"]
+[%header, %autowidth]
 |===
 | {PlatformNameShort} | {ControllerNameStart} | {HubNameStart} | {EDAcontroller} | {InsightsShort} | Platform gateway +
 (Unified UI)
 
-|2.5 | 4.6.0|
+|2.5 | 4.6.0
+a|
 * 4.10.0
 * hosted service|
 1.1.0
