AAP-30117 Tweaked the link for Adding role by removing index from the link shared in the jira

--- a/downstream/assemblies/eda/assembly-eda-user-guide-overview.adoc
+++ b/downstream/assemblies/eda/assembly-eda-user-guide-overview.adoc
@@ -25,5 +25,5 @@ The following procedures form the user configuration:
 .Additional resources
 For information on how to set user permissions for {EDAcontroller}, see the following in the link:{URLCentralAuth}/index[Access management and authentication guide]: 
 
-* link:{URLCentralAuth}/index#ref-controller-user-roles[Adding roles for a user]
+* link:{URLCentralAuth}/ref-controller-user-roles[Adding roles for a user]
 * link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/access_management_and_authentication/assembly-gw-roles[Roles]
