--- a/downstream/modules/hub/proc-basic-repo-sync.adoc
+++ b/downstream/modules/hub/proc-basic-repo-sync.adoc
@@ -19,4 +19,4 @@ To limit repository synchronization to specific collections within a remote, you
 
 [role="_additional-resources"]
 .Additional resources
-For more information about using requirements files, see link:{URLHubManagingContent}/managing-collections-hub#repository-sync[Creating a requirements file].
+For more information about using requirements files, see link:{URLHubManagingContent}/managing-cert-valid-content#create-requirements-file_managing-cert-validated-content[Creating a requirements file].
