AAP-32141 Add Installing on Operator chapter to RHDH install guide (#2149)

--- a/downstream/modules/devtools/proc-rhdh-configure-aap-details.adoc
+++ b/downstream/modules/devtools/proc-rhdh-configure-aap-details.adoc
@@ -15,6 +15,10 @@ The Ansible plug-ins continue to function regardless of the {PlatformNameShort} 
 . Create a Personal Access Token (PAT) with “Read” scope in automation controller, following the
 link:{URLCentralAuth}/gw-token-based-authentication#assembly-controller-applications[Applications]
 section of _{TitleCentralAuth}_. 
+// 2.4 link:
+// link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_user_guide/assembly-controller-applications#proc-controller-apps-create-tokens[Adding tokens]
+// 2.4 link:
+// section of the _Automation controller user guide_. 
 . Edit your custom {RHDH} config map, for example `app-config-rhdh`.
 . Add your {PlatformNameShort} details to `app-config-rhdh.yaml`.
 ..  Set the `baseURL` key with your automation controller URL.
