--- a/downstream/titles/aap-plugin-rhdh-install/master.adoc
+++ b/downstream/titles/aap-plugin-rhdh-install/master.adoc
@@ -23,7 +23,11 @@ include::{Boilerplate}[]
 // ==== 
 
 include::devtools/assembly-rhdh-intro.adoc[leveloffset=+1]
+
+// Installation
 include::devtools/assembly-rhdh-install-ocp-helm.adoc[leveloffset=+1]
+include::devtools/assembly-rhdh-install-ocp-operator.adoc[leveloffset=+1]
+
 include::devtools/assembly-rhdh-subscription-warnings.adoc[leveloffset=+1]
 include::devtools/assembly-rhdh-upgrade-ocp.adoc[leveloffset=+1]
 include::devtools/assembly-rhdh-uninstall-ocp.adoc[leveloffset=+1]
