AAP-32141 Add Installing on Operator chapter to RHDH install guide (#2149)

--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -114,6 +114,7 @@
 :ToolsName: Ansible development tools
 :Test: Ansible-test
 :AAPRHDH: Ansible plug-ins for Red Hat Developer Hub
+:AAPRHDHShort: Ansible plug-ins
 :RHDH: Red Hat Developer Hub
 :RHDHVers: 1.2
 :RHDHShort: RHDH
