--- a/downstream/titles/develop-automation-content/master.adoc
+++ b/downstream/titles/develop-automation-content/master.adoc
@@ -25,9 +25,14 @@ include::snippets/technology-preview.adoc[]
 include::devtools/assembly-devtools-intro.adoc[leveloffset=+1]
 include::devtools/assembly-developer-workflow.adoc[leveloffset=+1]
 include::devtools/assembly-devtools-install.adoc[leveloffset=+1]
-// include::devtools/assembly-devtools-setup.adoc[leveloffset=+1]
+// ----- include::devtools/assembly-devtools-setup.adoc[leveloffset=+1]
 include::devtools/assembly-creating-playbook-project.adoc[leveloffset=+1]
 include::devtools/assembly-writing-running-playbook.adoc[leveloffset=+1]
-// include::devtools/assembly-testing-playbooks.adoc[leveloffset=+1]
+// ----- include::devtools/assembly-testing-playbooks.adoc[leveloffset=+1]
 include::devtools/assembly-publishing-playbook-collection-aap.adoc[leveloffset=+1]
+
+// Roles collections
+
+include::devtools/assembly-devtools-develop-collections.adoc[leveloffset=+1]
+include::devtools/assembly-devtools-create-roles-collection.adoc[leveloffset=+1]
 
