AAP-26942: Updated Lightspeed on-premise docs for AAP 2.5 support

--- a/lightspeed/assemblies/assembly_configuring-lightspeed-onpremise.adoc
+++ b/lightspeed/assemblies/assembly_configuring-lightspeed-onpremise.adoc
@@ -19,7 +19,7 @@ The following capabilities are not yet supported on {LightspeedShortName} on-pre
 
 [NOTE]
 ====
-{LightspeedShortName} on-premise deployments are supported on {PlatformName} version 2.4.
+{LightspeedShortName} on-premise deployments are supported on {PlatformName} version 2.4 and later.
 ====
 
 include::modules/con_overview-lightspeed-onpremise.adoc[leveloffset=+1]
