--- a/lightspeed/modules/proc_create-connection-secrets.adoc
+++ b/lightspeed/modules/proc_create-connection-secrets.adoc
@@ -32,8 +32,11 @@ Use this procedure to create secrets to connect to both {PlatformName} and {ibmw
 |Key |Value
 
 |`auth_api_url`
-|Enter the API URL of the {ControllerName} in the following format:
-`https://<CONTROLLER_SERVER_NAME>/api`.
+a|
+Enter the API URL of the {ControllerName} in the following format based on the {PlatformNameShort} version you are using:
+
+* For {PlatformNameShort} 2.4: `\https://<CONTROLLER_SERVER_NAME>/api`
+* For {PlatformNameShort} 2.5: `\https://<CONTROLLER_SERVER_NAME>`
 
 |`auth_api_key`
 |Enter the client ID of the OAuth application that you recorded earlier.
