--- a/lightspeed/modules/proc_create-lightspeed-instance.adoc
+++ b/lightspeed/modules/proc_create-lightspeed-instance.adoc
@@ -22,6 +22,7 @@ Use this procedure to create and deploy a {LightspeedShortName} instance to your
 .. *Name*: Enter a unique name for your {LightspeedShortName} instance.
 .. *Secret where the authentication information can be found*: Select the authentication secret that you created to connect to the {PlatformName}.
 .. *Secret where the model configuration can be found*: Select the model secret that you created to connect to {ibmwatsonxcodeassistant}.
+. Optional: If you created a bundle secret to trust a custom Certificate Authority, select the `bundle_cacert_secret` from menu:Advanced[Bundle CA Certificate Secret] list.
 . Click *Create*. 
 +
 The {LightspeedShortName} instance takes a few minutes to deploy to your namespace. After the installation status is displayed as *Successful*, the Ansible Lightspeed portal URL is available under menu:Networking[Routes] in {OCP}.
