AAP-26942: Incorporated peer feedback

--- a/lightspeed/modules/proc_update-redirect-uri.adoc
+++ b/lightspeed/modules/proc_update-redirect-uri.adoc
@@ -75,7 +75,7 @@ If you are running multiple instances of {LightspeedShortName} application with 
 
 +
 *Procedure when the {PlatformNameShort} operator is run on a virtual machine*:
-.. Log in into the virtual machine with the {PlatformNameShort} controller.
+.. Log in to the virtual machine with the {PlatformNameShort} controller.
 .. In the */etc/tower/conf.d/custom.py* file, add the following parameter: +
 `LOGOUT_ALLOWED_HOSTS = "<lightspeed_route-HostName>"`
 +
