Fix broken links in the Access management guide

--- a/downstream/modules/platform/ref-controller-organization-notifications.adoc
+++ b/downstream/modules/platform/ref-controller-organization-notifications.adoc
@@ -14,4 +14,4 @@ When {ControllerName} is enabled on the platform, you can review any notifier in
 . Use the toggles to enable or disable the notifications to use with your particular organization. For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/using_automation_execution/controller-enable-disable-notifications[Enable and disable notifications].
 . If no notifiers have been set up, select {MenuAEAdminJobNotifications} from the navigation panel.
 
-For information on configuring notification types, see link:{URLControllerUserGuide}/index#controller-notification-types[Notification types].
+For information on configuring notification types, see link:{URLControllerUserGuide}/controller-notification-types[Notification types].
