Fix broken links in the Access management guide (#2185)
* Fix broken links in the Access management guide

* Added <assemblyID>#<moduleID> to fix broken links

--- a/downstream/modules/platform/ref-controller-organization-notifications.adoc
+++ b/downstream/modules/platform/ref-controller-organization-notifications.adoc
@@ -11,7 +11,7 @@ When {ControllerName} is enabled on the platform, you can review any notifier in
 . From the *Organizations* list view, select the organization to which you want to manage notifications.
 //ddacosta - this might change to Notifiers tab.
 . Select the *Notification* tab. 
-. Use the toggles to enable or disable the notifications to use with your particular organization. For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/using_automation_execution/controller-enable-disable-notifications[Enable and disable notifications].
+. Use the toggles to enable or disable the notifications to use with your particular organization. For more information, see link:{URLControllerUserGuide}/controller-notifications#controller-enable-disable-notifications[Enable and disable notifications].
 . If no notifiers have been set up, select {MenuAEAdminJobNotifications} from the navigation panel.
 
-For information on configuring notification types, see link:{URLControllerUserGuide}/index#controller-notification-types[Notification types].
+For information on configuring notification types, see link:{URLControllerUserGuide}/controller-notifications#controller-notification-types[Notification types].
