AAP-32212 Updated cross reference to the credentials assembly

--- a/downstream/assemblies/eda/assembly-eda-user-guide-overview.adoc
+++ b/downstream/assemblies/eda/assembly-eda-user-guide-overview.adoc
@@ -7,7 +7,7 @@ These tools monitor IT solutions and identify events and automatically implement
 
 The following procedures form the user configuration:
 
-* xref:eda-set-up-credential[Setting up credentials]
+* xref:eda-credentials[Credentials]
 * xref:eda-set-up-new-project[Setting up a new project]
 * xref:eda-set-up-new-decision-environment[Setting up a new decision environment]
 //* xref:eda-set-up-token[Setting up a token to authenticate to {PlatformNameShort} Controller]
