--- a/downstream/assemblies/eda/assembly-eda-user-guide-overview.adoc
+++ b/downstream/assemblies/eda/assembly-eda-user-guide-overview.adoc
@@ -8,11 +8,17 @@ These tools monitor IT solutions and identify events and automatically implement
 The following procedures form the user configuration:
 
 * xref:eda-credentials[Credentials]
-* xref:eda-set-up-new-project[Setting up a new project]
-* xref:eda-set-up-new-decision-environment[Setting up a new decision environment]
-//* xref:eda-set-up-token[Setting up a token to authenticate to {PlatformNameShort} Controller]
-* xref:eda-set-up-rulebook-activation[Setting up a rulebook activation]
-* xref:eda-performance-tuning[Performance tuning for EDAcontroller]
+* xref:eda-credential-types[Credential types]
+* xref:eda-projects[Projects]
+* xref:eda-decision-environments[Decision environments]
+* xref:simplified-event-routing[Simplfied event routing]
+* xref:eda-set-up-rhaap-credential-type[Red Hat Ansible Automation Platform credential]
+* xref:eda-rulebook-activations[Rulebook activations]
+* xref:eda-rule-audit[Rule audit]
+* xref:eda-performance-tuning[Performance tuning for {EDAcontroller}]
+* xref:eda-event-filter-plugins[Event filter plugins]
+* xref:eda-logging-strategy[Event-Driven Ansible logging strategy]
+
 
 [NOTE]
 
