--- a/downstream/assemblies/eda/assembly-eda-user-guide-overview.adoc
+++ b/downstream/assemblies/eda/assembly-eda-user-guide-overview.adoc
@@ -7,12 +7,18 @@ These tools monitor IT solutions and identify events and automatically implement
 
 The following procedures form the user configuration:
 
-* xref:eda-set-up-credential[Setting up credentials]
-* xref:eda-set-up-new-project[Setting up a new project]
-* xref:eda-set-up-new-decision-environment[Setting up a new decision environment]
-//* xref:eda-set-up-token[Setting up a token to authenticate to {PlatformNameShort} Controller]
-* xref:eda-set-up-rulebook-activation[Setting up a rulebook activation]
-* xref:eda-performance-tuning[Performance tuning for EDAcontroller]
+* xref:eda-credentials[Credentials]
+* xref:eda-credential-types[Credential types]
+* xref:eda-projects[Projects]
+* xref:eda-decision-environments[Decision environments]
+* xref:simplified-event-routing[Simplfied event routing]
+* xref:eda-set-up-rhaap-credential-type[Red Hat Ansible Automation Platform credential]
+* xref:eda-rulebook-activations[Rulebook activations]
+* xref:eda-rule-audit[Rule audit]
+* xref:eda-performance-tuning[Performance tuning for {EDAcontroller}]
+* xref:eda-event-filter-plugins[Event filter plugins]
+* xref:eda-logging-strategy[Event-Driven Ansible logging strategy]
+
 
 [NOTE]
 
@@ -23,7 +29,9 @@ The following procedures form the user configuration:
 
 [role="_additional-resources"]
 .Additional resources
-For information on how to set user permissions for {EDAcontroller}, see the following in the link:{URLCentralAuth}/index[Access management and authentication guide]: 
+* For information on how to set user permissions for {EDAcontroller}, see the following in the link:{URLCentralAuth}/index[Access management and authentication guide]: 
 
-* link:{URLCentralAuth}/gw-managing-access#ref-controller-user-roles[Adding roles for a user]
-* link:{URLCentralAuth}/assembly-gw-roles[Roles]
+** link:{URLCentralAuth}/gw-managing-access#ref-controller-user-roles[Adding roles for a user]
+** link:{URLCentralAuth}/assembly-gw-roles[Roles]
+
+* If you plan to use {EDAName} 2.5 with a 2.4 {ControllerName}, see link:docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.4/html-single/using_event-driven_ansible_2.5_with_ansible_automation_platform_2.4/index[Using Event-Driven Ansible 2.5 with Ansible Automation Platform 2.4].
