Fix links in operator-mesh guide
Fixed links

Check links in 2.5 documents

https://issues.redhat.com/browse/AAP-32226

--- a/downstream/modules/platform/proc-define-mesh-node-types.adoc
+++ b/downstream/modules/platform/proc-define-mesh-node-types.adoc
@@ -68,7 +68,7 @@ The Select Peers window is displayed.
 //image::instances_create_details.png[Create Instance details]
 
 ifdef::operator-mesh[]
-. To view a graphical representation of your updated topology, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/assembly-controller-topology-viewer[Topology viewer].
+. To view a graphical representation of your updated topology, see link:{URLControllerAdminGuide}/assembly-controller-topology-viewer[Topology viewer].
 endif::operator-mesh[]
 ifdef::controller-UG[]
 . To view a graphical representation of your updated topology, see xref:assembly-controller-topology-viewer[Topology viewer].
