Fixed links in automation-mesh guide
Fixed links

Check links in 2.5 documents

https://issues.redhat.com/browse/AAP-32226

--- a/downstream/assemblies/platform/assembly-setting-up-automation-mesh.adoc
+++ b/downstream/assemblies/platform/assembly-setting-up-automation-mesh.adoc
@@ -21,7 +21,7 @@ include::platform/proc-import-mesh-ca.adoc[leveloffset=+1]
 [role="_additional-resources"]
 .Additional resources
 
-* link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_planning_guide/platform-system-requirements[{PlatformName} System Requirements]
+* link:{URLPlanningGuide}/platform-system-requirements[System Requirements]
 
 ifdef::parent-context[:context: {parent-context}]
 ifndef::parent-context[:!context:]
