--- a/downstream/modules/platform/con-install-mesh.adoc
+++ b/downstream/modules/platform/con-install-mesh.adoc
@@ -7,5 +7,5 @@ To provide {PlatformNameShort} with details about the nodes, groups, and peer re
 
 [role="_additional-resources"]
 .Additional Resources
-* link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_installation_guide/index[{PlatformName} Installation Guide]
-* <<design-patterns, Automation Mesh Design Patterns>>
+* link:{URLInstallationGuide}/index[{TitleInstallationGuide}]
+* xref:design-patterns[Automation mesh design patterns]
