--- a/downstream/modules/platform/proc-editing-inventory-file.adoc
+++ b/downstream/modules/platform/proc-editing-inventory-file.adoc
@@ -31,7 +31,7 @@ $ cd ansible-automation-platform-setup-<latest-version>
 . Open the `inventory` file with a text editor.
 . Edit `inventory` file parameters to specify your installation scenario. 
 ifdef::mesh-VM[]
-For further information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/installing_on_virtual_machines/assembly-platform-install-scenario[Installing {PlatformName}]
+For further information, see link:{URLInstallationGuide}/assembly-platform-install-scenario#proc-editing-installer-inventory-file_platform-install-scenario[Editing the {PlatformName} installer inventory file]
 endif::mesh-VM[]
 ifdef::aap-install[]
 You can use one of the supported xref:con-install-scenario-examples[Installation scenario examples] as the basis for your `inventory` file.
