Correct links in Controller Admin
Correct links

Check links in 2.5 documents

https://issues.redhat.com/browse/AAP-32226

--- a/downstream/modules/platform/proc-controller-configure-system.adoc
+++ b/downstream/modules/platform/proc-controller-configure-system.adoc
@@ -40,7 +40,7 @@ If *Gather data for {Analytics}* is set to false, this value is ignored.
 * *Last computing date of HostMetricSummaryMonthly*: Set the date and time.
 * *Remote Host Headers*: HTTP headers and meta keys to search to decide remote hostname or IP. 
 Add additional items to this list, such as `HTTP_X_FORWARDED_FOR`, if behind a reverse proxy. 
-For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_operations_guide/assembly-configuring-proxy-support[Configuring proxy support for {PlatformName}].
+For more information, see link:{URLAAPOperationsGuide}/assembly-configuring-proxy-support[Configuring proxy support for {PlatformName}].
 * *Automation Analytics upload URL*: This value has been set manually in a settings file. 
 This setting is used to configure the upload URL for data collection for Automation Analytics.
 * *Defines subscription usage model and shows Host Metrics*: 
