--- a/downstream/modules/platform/proc-controller-management-notifications.adoc
+++ b/downstream/modules/platform/proc-controller-management-notifications.adoc
@@ -9,7 +9,7 @@ Use the following procedure to review or set notifications associated with a man
 
 //image:management-job-notifications.png[Notifications]
 
-If none exist, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_user_guide/controller-notifications#controller-create-notification-template[Creating a notification template] in _{ControllerUG}_.
+If none exist, see link:{URLControllerUserGuide}/controller-notifications#controller-create-notification-template[Creating a notification template] in _{ControllerUG}_.
 
 image:management-job-notifications-empty.png[No notifications set]
 
