--- a/downstream/modules/platform/proc-controller-set-up-prometheus.adoc
+++ b/downstream/modules/platform/proc-controller-set-up-prometheus.adoc
@@ -15,7 +15,7 @@ Alternatively, you can provide an OAuth2 token (which can be generated at `/api/
 By default, the configuration assumes a user with username=`admin` and password=`password`.
 ====
 +
-Using an OAuth2 Token, created at the `/api/v2/tokens` endpoint to authenticate Prometheus with {ControllerName}, the following example provides a valid scrape configuration if the URL for your {ControllerName}'s metrics endpoint is `https://controller_host:443/metrics`.
+Using an OAuth2 Token, created at the `/api/v2/tokens` endpoint to authenticate Prometheus with {ControllerName}, the following example provides a valid scrape configuration if the URL for your {ControllerName}'s metrics endpoint is `/https://controller_host:443/metrics`.
 +
 [literal, options="nowrap" subs="+attributes"]
 ----
@@ -40,7 +40,7 @@ For help configuring other aspects of Prometheus, such as alerts and service dis
 +
 If Prometheus is already running, you must restart it to apply the configuration changes by making a *POST* to the reload endpoint, or by killing the Prometheus process or service.
 
-. Use a browser to navigate to your graph in the Prometheus UI at `http://<your_prometheus>:9090/graph` and test out some queries. 
+. Use a browser to navigate to your graph in the Prometheus UI at `/http://<your_prometheus>:9090/graph` and test out some queries. 
 For example, you can query the current number of active {ControllerName} user sessions by executing: `awx_sessions_total{type="user"}`.
 +
 image:metrics-prometheus-ui-query-example.png[Prometheus queries]
