--- a/downstream/assemblies/platform/assembly-inventory-file-importing.adoc
+++ b/downstream/assemblies/platform/assembly-inventory-file-importing.adoc
@@ -21,7 +21,7 @@ For example, if importing from a sourced `.ini` file, you can add the following 
 
 Similarly, group descriptions also default to _imported_, but can also be overridden by `_awx_description`.
 
-To use old inventory scripts in source control, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_user_guide/controller-inventories#ref-controller-export-old-scripts[Export old inventory scripts] in _{ControllerUG}_.
+To use old inventory scripts in source control, see link:{URLControllerUserGuide}/controller-inventories#ref-controller-export-old-scripts[Export old inventory scripts] in _{ControllerUG}_.
 
 //include::platform/con-controller-custom-dynamic-inv-scripts.adoc[leveloffset=+1]
 include::platform/ref-controller-scm-inv-source-fields.adoc[leveloffset=+1]
