--- a/downstream/modules/platform/proc-define-mesh-node-types.adoc
+++ b/downstream/modules/platform/proc-define-mesh-node-types.adoc
@@ -68,10 +68,10 @@ The Select Peers window is displayed.
 //image::instances_create_details.png[Create Instance details]
 
 ifdef::operator-mesh[]
-. To view a graphical representation of your updated topology, see link:{URLControllerAdminGuide}/assembly-controller-topology-viewer[Topology viewer].
+. To view a graphical representation of your updated topology, see link:{URLControllerUserGuide}/assembly-controller-topology-viewer[Topology view].
 endif::operator-mesh[]
 ifdef::controller-UG[]
-. To view a graphical representation of your updated topology, see xref:assembly-controller-topology-viewer[Topology viewer].
+. To view a graphical representation of your updated topology, see xref:assembly-controller-topology-viewer[Topology view].
 endif::controller-UG[]
 +
 [NOTE]
