AAP-32244-planning updated links 1

--- a/downstream/modules/platform/con-about-eda-controller.adoc
+++ b/downstream/modules/platform/con-about-eda-controller.adoc
@@ -11,10 +11,5 @@ The {EDAcontroller} is the interface for event-driven automation and introduces 
 
 [role="_additional-resources"]
 .Additional resources
-
-////
-The following link will not work until published.
-////
-
-* link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/getting_started_with_event-driven_ansible_guide/index[Getting Started with Event-Driven Ansible Guide].
+* link:{URLEDAUserGuide}[{TitleEDAUserGuide}]
 
