--- a/downstream/assemblies/platform/assembly-system-requirements.adoc
+++ b/downstream/assemblies/platform/assembly-system-requirements.adoc
@@ -11,7 +11,9 @@ Use this information when planning your {PlatformName} installations and designi
 
 * You can obtain root access either through the `sudo` command, or through privilege escalation. For more on privilege escalation, see link:https://docs.ansible.com/ansible/latest/playbook_guide/playbooks_privilege_escalation.html[Understanding privilege escalation].
 * You can de-escalate privileges from root to users such as: AWX, PostgreSQL, {EDAName}, or Pulp.
-* You have configured an NTP client on all nodes. For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_upgrade_and_migration_guide/migrate-isolated-execution-nodes#automation_controller_configuration_requirements[Configuring NTP server using Chrony].
+* You have configured an NTP client on all nodes. 
+// emurtough commented out link to upgrade and migration guide - to be replaced once the guide is published
+// For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_upgrade_and_migration_guide/migrate-isolated-execution-nodes#automation_controller_configuration_requirements[Configuring NTP server using Chrony].
 
 // emurtough commented out files to address duplication across 2.5 doc set 9/18/2024
 // ddacosta added conditional tags to share content between install guide and planning guide
